--- a/bibliography.bib
+++ b/bibliography.bib
@@ -483,8 +483,8 @@ MRREVIEWER = {Ren\~A\copyright{} Schoof},
 }
 
 @article {Poli,
-    AUTHOR = {Poli, A.},
-     TITLE = {A deterministic construction for normal bases of abelian
+    AUTHOR = {Poli, Alain},
+     TITLE = {A deterministic construction for normal bases of Abelian
               extensions},
    JOURNAL = {Comm. Algebra},
   FJOURNAL = {Communications in Algebra},
@@ -662,7 +662,7 @@ MRREVIEWER = {Tony Shaska},
      TITLE = {Algorithms in invariant theory},
     SERIES = {Texts and Monographs in Symbolic Computation},
    EDITION = {Second},
- PUBLISHER = {SpringerWienNewYork, Vienna},
+ PUBLISHER = {Springer},
       YEAR = {2008},
      PAGES = {vi+197},
       ISBN = {978-3-211-77416-8},
@@ -690,19 +690,12 @@ MRREVIEWER = {Thomas Garrity},
        URL = {http://dx.doi.org/10.1007/978-3-662-48422-7},
 }
 
-@book {Renault,
-    AUTHOR = {Renault, Marc Stetson},
-     TITLE = {Computing generators for rings of multiplicative invariants},
-      NOTE = {Thesis (Ph.D.)--Temple University},
- PUBLISHER = {ProQuest LLC, Ann Arbor, MI},
-      YEAR = {2002},
-     PAGES = {79},
-      ISBN = {978-0496-27026-2},
-   MRCLASS = {Thesis},
-  MRNUMBER = {2704228},
-       URL =
-              {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3079141},
-}
+
+@PhdThesis{Renault,
+  author = 	 {Renault, Marc Stetson},
+  title = 	 {Computing generators for rings of multiplicative invariants},
+  school = 	 {Temple University},
+  year = 	 2002}
 
 @book {Goss,
     AUTHOR = {Goss, David},
