references of the no-name lemma are added and algorithms about multiplicative invariants are mentioned.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -796,3 +796,34 @@ MRREVIEWER = {Robert Speiser},
   MRNUMBER = {2523139},
 MRREVIEWER = {Frank D. Grosshans},
 }
+
+@incollection {Dolgachev,
+    AUTHOR = {Dolgachev, Igor V.},
+     TITLE = {Rationality of fields of invariants},
+ BOOKTITLE = {Algebraic geometry, {B}owdoin, 1985 ({B}runswick, {M}aine,
+              1985)},
+    SERIES = {Proc. Sympos. Pure Math.},
+    VOLUME = {46},
+     PAGES = {3--16},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {1987},
+   MRCLASS = {14L30 (14D25 14L35 14M20 20G05)},
+  MRNUMBER = {927970},
+MRREVIEWER = {P. E. Newstead},
+}
+
+@incollection {Sansuc,
+    AUTHOR = {Colliot-Th\'el\`ene, Jean-Louis and Sansuc, Jean-Jacques},
+     TITLE = {The rationality problem for fields of invariants under linear
+              algebraic groups (with special regards to the {B}rauer group)},
+ BOOKTITLE = {Algebraic groups and homogeneous spaces},
+    SERIES = {Tata Inst. Fund. Res. Stud. Math.},
+    VOLUME = {19},
+     PAGES = {113--186},
+ PUBLISHER = {Tata Inst. Fund. Res., Mumbai},
+      YEAR = {2007},
+   MRCLASS = {13A50 (14E08 14F22)},
+  MRNUMBER = {2348904},
+MRREVIEWER = {Jean-Pierre Tignol},
+}
+
