--- a/AlgebraicConsructionOfQuasiSplitTorus.tex
+++ b/AlgebraicConsructionOfQuasiSplitTorus.tex
@@ -95,11 +95,11 @@
 \begin{abstract}
 
 The main purpose of this work is to give a constructive proof for the
-No Name Lemma. \todo{or of a particular case of it?} Let $G$ be a
+no-name lemma. \todo{or of a particular case of it?} Let $G$ be a
 finite group, $K$ be a field, $L$ be a permutation $G$-lattice 
 %with the standard basis
 and $K[L]$ be the group algebra of $L$ over
-$K$. The No Name Lemma asserts that the invariant field of the
+$K$. The no-name lemma asserts that the invariant field of the
 quotient field of $K[L]$, $K(L)^G$ is a purely transcendental
 extension of $K^G$. In other words, there exist $y_1, \ldots , y_n$
 which are algebraically independent over $K^G$ such that $K(L)^G \cong
@@ -167,11 +167,14 @@ subgroup of $G$ which fixes the subfield $E$.
 [\textbf{Remark (removable): The Weil restriction here is not necessarily with respect to a finite Galois extension $K/F$
 as this would only produce character lattices which are direct sums of the group ring.}]
 
-The No Name Lemma asserts that if $L$ is a permutation $G$-lattice and
+The no-name lemma in a particular case, asserts that if $L$ is a permutation $G$-lattice and
 $K$ is a $G$-field, then $K(L)^G$ is rational over
 $K^G$~\cite[Chapter~9.4]{Lorenz}; in particular, with $G={\rm
-  Gal}(K/F)$, $K(L)^G$ is $F$-rational.  In this paper, we give a
-constructive proof of this fact (and of a slight generalization
+  Gal}(K/F)$, $K(L)^G$ is $F$-rational. The term "no-name lemma" was first used 
+by Dolgachev in \cite{Dolgachev}, expressing the fact that many researchrs 
+discovered the result independently. It is actually more general than the stated 
+version here; see \cite[p. 6]{Dolgachev}, \cite[Section 3.2]{Sansuc}, \cite[Proposition 1.3]{Lenstra}, \cite[Remark 2.4]{Domokos} and \cite[Proposition 1.1]{EndoMiyata}.  In this paper, we give a
+constructive proof of  the no-name lemma (and of a slight generalization
 thereof, using signed permutation matrices), by exhibiting a basis for
 such a field of invariants.  In concrete terms, we start from a
 subgroup of $\mathrm{GL}(n,\Z)$ and describe the field of functions of
@@ -227,16 +230,16 @@ by $$g(x_i) = \begin{cases} x_j & \text{if~} g(\be_i) = \be_j
 
 For such groups $G$, the $F$-rationality of the torus $T_{G}$ means
 that for $K(x_1,\dots,x_n)$, endowed with the $G$-action we just
-described, there exist algebraically independent $y_1,\dots,y_n$ in $K(x_1,\dots,x_n)$ such that
-$K(x_1,\dots,x_n)^G=F(y_1,\dots,y_n)$. However, the proofs of the No
-Name Lemma we are aware of~\cite{xxx}~\todo{which ones?} are non
-constructive.  The goal of this paper is to exhibit such 
+described, there exist algebraically independent $y_1,\dots,y_n$ in 
+$K(x_1,\dots,x_n)$ such that $K(x_1,\dots,x_n)^G=F(y_1,\dots,y_n)$. 
+However, the proofs of the no-name lemma we are aware of
+are non constructive.  The goal of this paper is to exhibit such 
 an algebraically independent set $\{y_i:i=1,\dots,n\}$; we
-state two such results. \todo{Better discussion needed. How general
-  are our results compared to other version of the no-name lemma?}  In
-particular, this can be applied to get an explicit transcendence basis
-of the function field of a quasi-split algebraic torus $T_G$, provided
-$G$ is given as a group of permutation matrices.
+state two such results. Note that the first result is a special case of
+ the general version of the no-name lemma. In particular, this can be 
+ applied to get an explicit transcendence basis of the function field 
+ of a quasi-split algebraic torus $T_G$, provided $G$ is given as a group 
+ of permutation matrices.
 
 In both our theorems, we rely on the notion of a {\em normal element} of
 a finite Galois extension $K/F$ with Galois group $G$; we recall that
@@ -270,8 +273,11 @@ the construction is not the same as in the previous theorem).
 There are many algorithms for finding the invariant rings for
 polynomial invariants~\cite{Sturmfels,Kemper2}. For multiplicative
 invariants, the algorithmic landscape is not developed to the same
-extent; see however some references in~\cite{Kemper,Lorenz,Renault}.
-\todo{say more}
+extent. In \cite{Renault} the author introduced an algorithm to 
+compute a generating set for the ring of multiplicative invariants, 
+when the acting group is a subgroup of a reflection group. A more 
+general algorithm for computing the ring of multiplicative invariants
+ is given by Kemper in \cite{Kemper}. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -711,22 +717,6 @@ One can also verify that $G$ is isomorphic to $\mathrm{Gal}(K/\Q)$;
 $\sigma(\rho)=\rho^2$.  This implies that $\sigma^k(\rho)=\rho^{2^k}$, $k=0,1,2,3$.
 In particular, $\sigma^3(\rho)=\rho^{8}=\rho^3$.
 
-\textbf{The table I omit below is correct but not needed.  We only need $\sigma^k(\rho)$ which follow from $\sigma(\rho)=\rho^2$ as above.}
-through this action, it acts on the $5$-th roots of unity as follows:
-\begin{table}[H]
-\centering
-\begin{tabular}{l|llll} 
-& id & $\sigma$ & $\sigma^2$ & $\sigma^3$\\
-\hline
-%% $x_1$  & $x_1$ & $x_2^{-1}$ & $x_1^{-1}$ & $x_2$ \\
-%% $x_2$ & $x_2$ & $x_1$ & $x_2^{-1}$ & $x_1^{-1}$ \\
-%% $x_3$ & $x_3$ & $x_3^{-1}$ & $x_3$ & $x_3^{-1}$ \\
-$\rho$ & $\rho$ & $\rho^2$ & $\rho^4$ &  $\rho^3$\\
-$\rho^2$ & $\rho^2$ & $\rho^4$ & $\rho^3$ &  $\rho$\\
-$\rho^3$ & $\rho^3$ & $\rho$ & $\rho^2$ &  $\rho^4$\\
-$\rho^4$ & $\rho^4$ & $\rho^3$ & $\rho$ &  $\rho^2$
-\end{tabular}.
-\end{table}
 We choose $\rho$ as our normal element of the extension $K/\Q$.
 (A primitive $p$th root of unity is a normal element for the extension over $\Q$ that it generates.)
 
