references of the no-name lemma are added

--- a/AlgebraicConsructionOfQuasiSplitTorus.tex
+++ b/AlgebraicConsructionOfQuasiSplitTorus.tex
@@ -94,8 +94,8 @@
 
 \begin{abstract}
 
-The main purpose of this work is to give a constructive proof for the
-no-name lemma. \todo{or of a particular case of it?} Let $G$ be a
+The main purpose of this work is to give a constructive proof for a 
+particular case of the no-name lemma. Let $G$ be a
 finite group, $K$ be a field, $L$ be a permutation $G$-lattice 
 %with the standard basis
 and $K[L]$ be the group algebra of $L$ over
@@ -167,7 +167,8 @@ subgroup of $G$ which fixes the subfield $E$.
 [\textbf{Remark (removable): The Weil restriction here is not necessarily with respect to a finite Galois extension $K/F$
 as this would only produce character lattices which are direct sums of the group ring.}]
 
-The no-name lemma in a particular case, asserts that if $L$ is a permutation $G$-lattice and
+A specific case of the no-name lemma, which we refer to it with the same name, 
+asserts that if $L$ is a permutation $G$-lattice and
 $K$ is a $G$-field, then $K(L)^G$ is rational over
 $K^G$~\cite[Chapter~9.4]{Lorenz}; in particular, with $G={\rm
   Gal}(K/F)$, $K(L)^G$ is $F$-rational. The term "no-name lemma" was first used 
@@ -277,7 +278,9 @@ extent. In \cite{Renault} the author introduced an algorithm to
 compute a generating set for the ring of multiplicative invariants, 
 when the acting group is a subgroup of a reflection group. A more 
 general algorithm for computing the ring of multiplicative invariants
- is given by Kemper in \cite{Kemper}. 
+ is given by Kemper in \cite{Kemper}. It is worth mentioning that although 
+both above algorithms may be applied to our problem, they 
+will not necessarily produce a transcendence basis of the invariant field. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
