--- a/AlgebraicConsructionOfQuasiSplitTorus.tex
+++ b/AlgebraicConsructionOfQuasiSplitTorus.tex
@@ -89,7 +89,7 @@
 \author[2]{Nicole Lemire}
 \author[1]{\'Eric Schost}
 \affil[1]{David Cheriton School of Computer Science, University of Waterloo}
-\affil[2]{Department of Mathematics, Western University}
+\affil[2]{Department of Mathematics, University of Western Ontario}
 
 \begin{document}
 
@@ -290,7 +290,7 @@ both above algorithms may be applied to our problem, they
 will not necessarily produce a transcendence basis of the invariant field. 
 
 
-\paragraph{Acknowledgements.} The third author is supported by an NSERC
+\paragraph{Acknowledgements.} The second and third authors are supported by an NSERC
 Discovery Grant. We thank Gregor Kemper for his feedback on an earlier 
 version of this work.
 
